# fpaxos-lib

./: .gitignore  CMakeLists.txt  COPYING  LICENSE.md  Makefile  Makefile.conf  Makefile.inc  README  README.md  config.cfg  libpaxos.h  paxos.conf  paxos_acceptor.conf  paxos_config.h  tmux-test.sh
cmake/: FindBDB.cmake  FindGTEST.cmake  FindLIBEVENT.cmake  FindLMDB.cmake  FindMSGPACK.cmake
evpaxos/: CMakeLists.txt  acceptor.c  config.c  config_reader.c  ev_standard_acceptor.c  ev_write_ahead_window_acceptor.c  evacceptor.c  evlearner.c  evproposer.c  evreplica.c  learner.c  message.c  paxos_types_pack.c  peers.c  proposer.c  tcp_receiver.c  tcp_sendbuf.c
evpaxos/include/: config.h  config_reader.h  evpaxos.h  evpaxos_internal.h  message.h  paxos_types_pack.h  peers.h  tcp_receiver.h  tcp_sendbuf.h
evpaxos/include/evpaxos/: config.h  paxos.h
include/: acceptor.h  acceptor_stable_storage.h  acceptor_state.h  carray.h  config_reader.h  learner.h  learner_state.h  libpaxos.h  libpaxos_messages.h  libpaxos_priv.h  paxos_config.h  paxos_net.h  paxos_udp.h  proposer.h  proposer_state.h  quorum.h  storage.h  tcp_receiver.h  tcp_sendbuf.h  values_handler.h
lib/: CMakeLists.txt  Makefile  acceptor.c  acceptor_stable_storage.c  acceptor_state.c  carray.c  config.c  config_reader.c  learner.c  learner_state.c  paxos_malloc.c  proposer.c  proposer_leader.c  proposer_state.c  proposer_values_handler.c  quorum.c  storage.c  storage_mem.c  submit_handle.c  tcp_receiver.c  tcp_sendbuf.c  udp_receiver.c  udp_sendbuf.c
paxos/: CMakeLists.txt  acceptor.c  ballot.c  carray.c  config.c  epoch_paxos_storage.c  epoch_proposer.c  epoch_stable_storage.c  hash_mapped_memory.c  learner.c  paxos.c  paxos_message_conversion.c  paxos_storage.c  paxos_util.c  paxos_value.c  paxos_xdr.c  proposer.c  proposer_common.c  quorum.c  stable_storage.c  stable_storage_but_not_really.c  stable_storage_lmdb.c  standard_acceptor.c  standard_proposer.c  standard_stable_storage.c  storage.c  storage_bdb.c  storage_lmdb.c  storage_mem.c  storage_utils.c  write_ahead_window_acceptor.c  writeahead_epoch_acceptor.c  writeahead_window_acceptor.c  xdr.c
paxos/include/: acceptor.h  ballot.h  carray.h  epoch_learner.h  epoch_paxos_storage.h  epoch_proposer.h  epoch_quorum.h  epoch_stable_storage.h  hash_mapped_memory.h  instance.h  khash.h  learner.h  libpaxos.h  libpaxos_messages.h  paxos.h  paxos_message_conversion.h  paxos_storage.h  paxos_types.h  paxos_util.h  paxos_value.h  proposer.h  proposer_common.h  quorum.h  stable_storage.h  standard_acceptor.h  standard_stable_storage.h  storage.h  storage_utils.h  write_ahead_acceptor.h  write_ahead_window_acceptor.h  writeahead_epoch_acceptor.h  writeahead_window_acceptor.h  xdr.h
sample/: CMakeLists.txt  acceptor.c  client.c  counter.c  learner.c  proposer.c  replica.c  standard_acceptor.c  write_ahead_window_acceptor.c
sample/include/: client_value.h
scripts/: mininet.sh
scripts/cluster/: benchmark_abmagic.sh  benchmark_simple.sh  foreach_node_do.sh  ping_all_nodes.sh
scripts/common/: auto_launch.sh
scripts/local/: run_abmagic.sh  run_debug_prop.sh  run_example.sh  run_multiproposer.sh
tests/: CMakeLists.txt  Makefile  abmagic.c  benchmark_client.c  client.c  example_acceptor.c  example_learner.c  example_oracle.c  example_proposer.c  tp_monitor.c  tp_sampler.c
tests/local/: local.sh  paxos.conf
tests/mininet/: lib-fpaxos.ipynb  paxos.conf  setup.py
unit/: CMakeLists.txt  acceptor_unittest.cc  config_unittest.cc  gtest.cc  learner_unittest.cc  proposer_unittest.cc  replica_thread.c  replica_thread.h  replica_unittest.cc  runtest.cc  storage_unittest.cc  test_client.c  test_client.h
unit/config/: replicas.conf  too-many.conf
unit/gtest/: CMakeLists.txt
utils/genpack/: paxos_genpack.rb
utils/genpack/lib/: genpack.rb
utils/genpack/lib/genpack/: generator.rb  schema.rb
